# elm-vendor

./: Cargo.toml  Justfile  PLAN.md  README.md
src/: elm_cli.rs  lib.rs  main.rs  shared.rs  utils.rs  vendoring.rs  version.rs
test-data/: sample-elm-app.json  sample-elm-package.json
tests/: test_init.rs
