[package]
name = "elm-vendor"
version = "0.1.0"
authors = ["Kevin M Granger <git@kevinmgranger.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
dialoguer = "0.9.0"
git2 = "0.13.25"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
structopt = "0.3.25"
tap = "1.0.1"
thiserror = "1.0.30"
toml = "0.5.8"
