[package]
name = "elm-vendor"
version = "0.1.0"
authors = ["Kevin M Granger <git@kevinmgranger.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.51", features=["backtrace"]}
clap = "2.34.0"
dialoguer = "0.9.0"
git2 = "0.13.25"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
structopt = "0.3.25"
tap = "1.0.1"
thiserror = "1.0.30"
toml = "0.5.8"
fehler = {rev = "cc7b192f935bd27c30f1bc4ee6dd2a5aed53b900", git = "https://github.com/withoutboats/fehler"}
pathdiff = "0.2.1"
nom = "7.1.0"
ranges = "0.3.3"
serde_with = "1.11.0"

[dev-dependencies]
tempfile = "3.2.0"
